<resources>
    <string name="app_name">UNIFACIL</string>
    <string name="facebook_app_id">457262724479078</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_fragment_indice">Índice Académico</string>
    <string name="title_fragment_solicitud_asignatura">Solicitud de asignatura</string>
    <string name="title_fragment_materias_actuales">Asignaturas Actuales</string>
    <string name="title_fragment_materias_proximas">Próximas Asignaturas</string>
    <string name="title_fragment_my_profile">Mi perfil</string>
    <string name="title_activity_unipass">Login - UniPASS</string>
    <string name="title_activity_unipass_list">Selección de universidades</string>
    <string name="title_activity_notifications">UNIFACIL Núcleo - Notificaciones</string>
    <string name="title_activity_solicitud_materia">UNIFACIL Núcleo - Listado</string>
    <string name="title_activity_selection">Selección</string>
    <string name="title_fragment_selection_escuela">Elegir escuela</string>
    <string name="title_fragment_selection_universidad">Elegir universidad</string>
    <string name="title_fragment_selection_carrera">Elegir carrera</string>
    <string name="title_fragment_selection_pensum">Elegir programa académico</string>
    <string name="title_fragment_selection_asig">Elegir asignaturas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to errors signup/login -->
    <string name="error_invalid_date">digitar una fecha válida"</string>
    <string name="error_long_password">entre 4 y 10 caracteres alfanuméricos</string>
    <string name="error_invalid_mail">digitar un correo válido</string>
    <string name="error_field_least">al menos 3 caracteres</string>
    <string name="error_field_radio">seleccionar uno</string>
    <string name="info_success_signup">¡Cuenta creada exitosamente!</string>
    <string name="error_login">Usuario/contraseña incorrecta</string>
    <string name="error_sign_up">Error al crear usuario</string>

    <string name="date">Date</string>
    <string name="loading">Cargando…</string>
    <string name="loading_miplan">Cargando plan…</string>
    <string name="loading_mismaterias">Cargando asignaturas…</string>
    <string name="loading_register_subject">Guardando selección…</string>

    <string name="asig_dialog_title">Indique la condición</string>
    <string name="asig_nota_dialog_title">Indique la nota</string>
    <string name="asig_nota_dialog_content">Favor digitar el valor númerico de la materia</string>
    <string name="asig_nota_prefill"></string>
    <string name="asign_hint">menor a 100 puntos</string>
    <string-array name="condiciones_asignaturas">
        <item>Aprobada</item>
        <item>Seleccionada</item>
        <item>Convalidada</item>
        <item>Exonerada</item>
        <item>Colación</item>
        <item>Pendiente</item>
    </string-array>


    <string name="dialog_terms">Al utilizar UNIFACIL, usted acepta sus términos y condiciones.</string>
    <string name="dialog_terms_accept">Aceptar</string>
    <string name="dialog_terms_decline">Declinar</string>

    <string name="dialog_unipass_title">UNIPass</string>
    <string name="dialog_unipass_title2">UNIPass es una modalidad de UNIFACIL que permite a los estudiantes acceder a la aplicación con los datos del Virtual y/o Intranet de su propia institución académica.</string>


    <!-- Generic labels -->
    <string name="label_name">Nombre</string>
    <string name="label_id">Matricula</string>
    <string name="label_email">Email</string>

    <!-- Subject application layout -->
    <string name="subject_application_header">Al llenar este formulario usted está de acuerdo a que quiere abrir la asignatura de:</string>
    <string name="subject_application_btn">Hacer solicitud</string>
    <string name="subject_application_success_message">"Tu solicitud ha sido procesada."</string>

    <!-- Strings related to HOME -->
    <string name="home_indice_academico">Índice Académico</string>
    <string name="home_materias_actuales">Asignaturas Actuales</string>
    <string name="home_materias_proximas">Asignaturas Próximas</string>


    <!-- Strings related to MIS MATERIAS -->
    <string name="ruta_critica">CRITICA</string>
    <string name="tooltip_rutacritica">Esta asignatura es crítica, y no debe dejarse de dar en dicho periodo, o implicaría un atraso</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="accept">Accept</string>

    <string name="eula_string">COPYRIGHTS:

    \nCopyright 2016 UNIFACIL. All Rights Reserved.

    \n\nThis software may not, in whole or in any part, be copied, reproduced, transmitted, translated (into any
    language, natural or computer), stored in a retrieval system, reduced to any electronic medium or machine readable
    format, or by any other form or means without prior consent, in writing, from UNIFACIL.

    \n\nYou are granted a limited license to use this software. The software may be used or copied only in accordance
    with the terms of that license, which is described in the following paragraphs.

    \n\nTRADEMARKS:
    \n\n[Software logos, icons, etc that are Trademarked]

    \n\nLICENSE:
    \n\n\"THE SOFTWARE\" shall be taken to mean the software contained in this app and any subsequent versions
    or upgrades received as a result of having purchased this app. \"BUYER\" shall be taken as the original
    purchaser of the software.

    \n\nBuyer has the non-exclusive right to the use of software only on a single device. Buyer may not electronically
    transfer the program from one device to another over any type of network. Buyer may not distribute copies
    of the software or the accompanying documentation to others either for a fee or without charge. Buyer may not modify
    or translate the program or documentation. User may not disassemble the program or allow it to be disassembled
    into its constituent source code. Buyer\'s use of the software indicates his/her acceptance of these terms
    and conditions. If buyer does not agree to these conditions, return the distribution media, documentation, and
    associated materials to the vendor from whom the software was purchased, and/or uninstall the software from the device,
    and erase the software from any and all storage devices upon which it may have been installed.

    \n\nThis license agreement shall be governed by the laws of The United States of America, Massachusetts and
    shall inure to the benefit of UNIFACIL or its assigns.

    \n\nDISCLAIMER / LIMITATION OF LIABILITY:
    \n\nBuyer acknowledges that the software may not be free from defects and may not satisfy all of buyer\'s
    needs. UNIFACIL warrants all media on which the software is distributed for 60 days to be free from defects
    in normal use. The software and any accompanying written materials are licensed \"AS IS\". Buyer\'s exclusive
    remedy during the warranty period (if any) shall consist of replacement of distribution media if determined to be
    faulty. In no event will UNIFACIL be liable for direct, indirect, incidental or consequential damage or
    damages resulting from loss of use, or loss of anticipated profits resulting from any defect in the software,
    even if it has been advised of the possibility of such damage. Some laws do not allow exclusion or limitation
    of implied warranties or liabilities for incidental or consequential damages, so the above limitations or
    exclusion may not apply.

    \n\nSPECIFIC RESTRICTIONS:
    \n\nIn accordance with the COMPUTER SOFTWARE RENTAL ACT OF 1990, this software may not be rented, lent or leased.
    \n\nThe software and accompanying documentation may not be provided by a \"Backup Service\" or any other vendor
    which does not provide an original package as composed of UNIFACIL, including but not limited to all original
    distribution media, documentation, registration cards, and insertions.</string>

</resources>
