<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.mcp.mycareerplan.fragments.FgmSolicitudAsignatura"
        android:orientation="vertical"
        android:id="@+id/subject_application_layout"
        android:padding="16dp"
        android:paddingTop="16dp">


        <ImageView android:src="@drawable/unifacil_logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logo_size"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Universidad Iberoamericana"
            android:id="@+id/textView18"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Ingenería en Tecnología de la Información y Comunicación"
            android:id="@+id/textView19"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Semestre 2016-3"
            android:id="@+id/textView20"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="2dp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/subject_application_header"
            android:id="@+id/subject_application_subject_header"
            android:layout_marginTop="16dp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cv"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">

            <!-- Name -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/subject_application_layout_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/spinner_solicitud_materias"
                    android:layout_gravity="center_horizontal" />
            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.CardView>
        <!-- ID -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/subject_application_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/subject_application_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/label_id"
                android:enabled="true" />
        </android.support.design.widget.TextInputLayout>


        <!-- Name -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/subject_application_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/subject_application_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/label_name"
                android:enabled="false" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/subject_application_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/subject_application_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/label_email"
                android:enabled="false" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/subject_application_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="@string/subject_application_btn"
            android:textColor="@color/white"
            android:background="@color/bg_buttons" />

    </LinearLayout>


    </ScrollView>