<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_subject_application"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/unifacil_logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logo_size"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/subject_application_header"
            android:id="@+id/subject_application_subject_header" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cv"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="Fisica III"
                            android:id="@+id/subject_application_nombr"
                            android:textStyle="bold"
                            android:textSize="22dp"
                            android:layout_marginBottom="4dp"
                            android:maxLines="1"
                            android:ellipsize="marquee" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:gravity="center_vertical">

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:text="CGF-130"
                                    android:id="@+id/subject_application_code" />
                            </LinearLayout>

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:id="@+id/asig_digit_notification"
                                    android:gravity="right"
                                    android:textColor="@color/primary"
                                    android:textStyle="bold|italic" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Name -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/subject_application_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/subject_application_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/label_name" />
        </android.support.design.widget.TextInputLayout>

        <!-- ID -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/subject_application_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/subject_application_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/label_id" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/subject_application_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/subject_application_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/label_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/subject_application_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="@string/subject_application_btn"
            android:textColor="@color/white"
            android:background="@color/bg_buttons" />

    </LinearLayout>
</ScrollView>
